# TorchCS-Loader

./: CMakeLists.txt  readme.md
.github/workflows/: ci.yml
cmake/: torchcs_properties.cmake
src/: dllmain.cpp
